--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,12 @@
     "removeComments": false,
     "allowJs": true,
     "baseUrl": ".",
-    "lib": ["esnext", "dom"]
+    "lib": ["esnext", "dom"],
+    "paths": {
+      "@/*": [
+        "src/*"
+      ],
+    },
   },
   "exclude": ["node_modules"],
   "include": [
