--- a/package.json
+++ b/package.json
@@ -1,22 +1,36 @@
 {
   "name": "property-management",
   "version": "0.0.0",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky install"
   },
   "dependencies": {
     "axios": "^0.25.0",
+    "naive-ui": "^2.24.7",
     "pinia": "^2.0.10",
     "qs": "^6.10.3",
     "vue": "^3.2.25",
     "vue-router": "4"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^16.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
+    "@typescript-eslint/parser": "^5.10.1",
     "@vitejs/plugin-vue": "^2.0.0",
+    "autoprefixer": "^10.4.2",
+    "commitlint": "^16.1.0",
+    "eslint": "^8.8.0",
+    "eslint-plugin-vue": "^8.4.0",
+    "husky": "^7.0.4",
     "less": "^4.1.2",
-    "naive-ui": "^2.24.7",
+    "npx": "^10.2.2",
+    "postcss": "^8.4.5",
+    "prettier": "^2.5.1",
+    "tailwindcss": "3.0.17",
     "vite": "^2.7.2"
   }
 }
