--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "commit": "git-cz"
   },
   "dependencies": {
     "axios": "^0.25.0",
@@ -22,7 +23,9 @@
     "@typescript-eslint/parser": "^5.10.1",
     "@vitejs/plugin-vue": "^2.0.0",
     "autoprefixer": "^10.4.2",
+    "commitizen": "^4.2.4",
     "commitlint": "^16.1.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.8.0",
     "eslint-plugin-vue": "^8.4.0",
     "husky": "^7.0.4",
