--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-vue": "^8.4.0",
     "husky": "^7.0.4",
     "less": "^4.1.2",
+    "lint-staged": "^12.3.3",
     "npx": "^10.2.2",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
